--- a/dep_corrected.ipynb
+++ b/dep_corrected.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3959b4da",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e08c3c14",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8115ab59",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "82f97520",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "93bbc1a7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "21a2608e",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "41370016",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "13cdae86",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "179af32f",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "4a4ed6a4",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "c78ab187",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "51d69386",
    "metadata": {},
    "outputs": [
@@ -460,16 +460,16 @@
    "id": "5c70a4c7",
    "metadata": {},
    "source": [
-    "## Differential protein expression\n",
-    "\n",
-    "Here, fold change is defined as the ratio of the difference between final value and the initial value divided by the initial value. For quantities A and B, the fold change is given as (B − A)/A."
+    "## Differential protein expression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "1ce09552",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -526,27 +526,113 @@
       "renaming the first element in assays to 'counts'\n",
       "\n",
       "converting counts to integer mode\n",
+      "\n",
+      "estimating size factors\n",
+      "\n",
+      "estimating dispersions\n",
+      "\n",
+      "gene-wise dispersion estimates\n",
+      "\n",
+      "mean-dispersion relationship\n",
+      "\n",
+      "final dispersion estimates\n",
+      "\n",
+      "fitting model and testing\n",
+      "\n",
+      "-- replacing outliers and refitting for 88 genes\n",
+      "-- DESeq argument 'minReplicatesForReplace' = 7 \n",
+      "-- original counts are preserved in counts(dds)\n",
+      "\n",
+      "estimating dispersions\n",
+      "\n",
+      "fitting model and testing\n",
       "\n"
      ]
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error in DESeqDataSet(se, design = ~condition + Diagnosis): variables in design formula cannot contain NA: Diagnosis\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in DESeqDataSet(se, design = ~condition + Diagnosis): variables in design formula cannot contain NA: Diagnosis\nTraceback:\n",
-      "1. DESeqDataSet(se, design = ~condition + Diagnosis)",
-      "2. stop(paste(\"variables in design formula cannot contain NA:\", \n .     v))"
-     ]
+     "data": {
+      "text/plain": [
+       "class: DESeqDataSet \n",
+       "dim: 4688 44 \n",
+       "metadata(1): version\n",
+       "assays(6): counts mu ... replaceCounts replaceCooks\n",
+       "rownames(4688): A2M A8MWD9 ... ZYX ZZEF1\n",
+       "rowData names(29): hgnc_symbol ProteinGroupId ... maxCooks replace\n",
+       "colnames(44): CTG_2226 CTG_2227 ... CTG_3679 CTG_3680\n",
+       "colData names(7): ID label ... sizeFactor replaceable"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "se  <- data\n",
     "assay(se) <- round(2^assay(se)) # deseq2 uses counts instead of log2(counts)\n",
     "head(assay(se), 2)\n",
-    "dds <- DESeqDataSet(se, design = ~ condition + Diagnosis)\n",
+    "dds <- DESeqDataSet(se, design = ~ condition)\n",
     "dds <- DESeq(dds)\n",
     "dds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4565c0c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "log2 fold change (MLE): condition PRETREATED vs NAIVE \n",
+       "Wald test p-value: condition PRETREATED vs NAIVE \n",
+       "DataFrame with 6 rows and 6 columns\n",
+       "         baseMean log2FoldChange     lfcSE        stat    pvalue      padj\n",
+       "        <numeric>      <numeric> <numeric>   <numeric> <numeric> <numeric>\n",
+       "A2M     74002.088   -0.652702443  0.398306 -1.63869700 0.1012764  0.999508\n",
+       "A8MWD9 365327.840   -0.000866021  0.224850 -0.00385155 0.9969269  0.999508\n",
+       "AAAS    61905.885    0.008685031  0.170817  0.05084411 0.9594497  0.999508\n",
+       "AACS      918.361   -0.077747152  0.366173 -0.21232335 0.8318548  0.999508\n",
+       "AAGAB    3374.928    0.136979191  0.155544  0.88064578 0.3785096  0.999508\n",
+       "AAK1    14460.394   -0.495532859  0.242417 -2.04413659 0.0409401  0.907045"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "res <- results(dds)\n",
+    "head(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "38e9b01d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3"
+      ],
+      "text/latex": [
+       "3"
+      ],
+      "text/markdown": [
+       "3"
+      ],
+      "text/plain": [
+       "[1] 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(res$padj < 0.05)"
    ]
   }
  ],
