--- a/dep_corrected.ipynb
+++ b/dep_corrected.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "3959b4da",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "e08c3c14",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "8115ab59",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "82f97520",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "93bbc1a7",
    "metadata": {},
    "outputs": [],
@@ -92,13 +92,13 @@
     "names(colData(data))[names(colData(data)) == 'Treatment.history'] <- 'condition'\n",
     "colData(data)$condition  <- as.factor(colData(data)$condition) # need to be factors for deseq2\n",
     "colData(data)$replicate <- colData(data)$ID \n",
-    "colData(data) <- subset(colData(data), select = c(ID, label, condition, replicate, Diagnosis))\n",
+    "colData(data) <- subset(colData(data), select = c(ID, label, condition, replicate))\n",
     "data <- data[, !is.na(colData(data)$condition)] # remove samples with NA condition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "21a2608e",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "rownames(4688): A2M A8MWD9 ... ZYX ZZEF1\n",
        "rowData names(6): hgnc_symbol ProteinGroupId ... imputed num_NAs\n",
        "colnames(44): CTG_2226 CTG_2227 ... CTG_3679 CTG_3680\n",
-       "colData names(5): ID label condition replicate Diagnosis"
+       "colData names(4): ID label condition replicate"
       ]
      },
      "metadata": {},
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "41370016",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "13cdae86",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "179af32f",
    "metadata": {},
    "outputs": [
@@ -313,22 +313,22 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>44</li><li>5</li></ol>\n"
+       "<ol class=list-inline><li>44</li><li>4</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 44\n",
-       "\\item 5\n",
+       "\\item 4\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 44\n",
-       "2. 5\n",
+       "2. 4\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 44  5"
+       "[1] 44  4"
       ]
      },
      "metadata": {},
@@ -338,41 +338,41 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 2 × 5</caption>\n",
+       "<caption>A data.frame: 2 × 4</caption>\n",
        "<thead>\n",
-       "\t<tr><th></th><th scope=col>ID</th><th scope=col>label</th><th scope=col>condition</th><th scope=col>replicate</th><th scope=col>Diagnosis</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>ID</th><th scope=col>label</th><th scope=col>condition</th><th scope=col>replicate</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>CTG_2226</th><td>CTG_2226</td><td>CTG_2226</td><td>PRETREATED</td><td>CTG_2226</td><td>REFRACTORY</td></tr>\n",
-       "\t<tr><th scope=row>CTG_2227</th><td>CTG_2227</td><td>CTG_2227</td><td>PRETREATED</td><td>CTG_2227</td><td>RELAPSED  </td></tr>\n",
+       "\t<tr><th scope=row>CTG_2226</th><td>CTG_2226</td><td>CTG_2226</td><td>PRETREATED</td><td>CTG_2226</td></tr>\n",
+       "\t<tr><th scope=row>CTG_2227</th><td>CTG_2227</td><td>CTG_2227</td><td>PRETREATED</td><td>CTG_2227</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 2 × 5\n",
-       "\\begin{tabular}{r|lllll}\n",
-       "  & ID & label & condition & replicate & Diagnosis\\\\\n",
-       "  & <chr> & <chr> & <fct> & <chr> & <fct>\\\\\n",
+       "A data.frame: 2 × 4\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & ID & label & condition & replicate\\\\\n",
+       "  & <chr> & <chr> & <fct> & <chr>\\\\\n",
        "\\hline\n",
-       "\tCTG\\_2226 & CTG\\_2226 & CTG\\_2226 & PRETREATED & CTG\\_2226 & REFRACTORY\\\\\n",
-       "\tCTG\\_2227 & CTG\\_2227 & CTG\\_2227 & PRETREATED & CTG\\_2227 & RELAPSED  \\\\\n",
+       "\tCTG\\_2226 & CTG\\_2226 & CTG\\_2226 & PRETREATED & CTG\\_2226\\\\\n",
+       "\tCTG\\_2227 & CTG\\_2227 & CTG\\_2227 & PRETREATED & CTG\\_2227\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 2 × 5\n",
+       "A data.frame: 2 × 4\n",
        "\n",
-       "| <!--/--> | ID &lt;chr&gt; | label &lt;chr&gt; | condition &lt;fct&gt; | replicate &lt;chr&gt; | Diagnosis &lt;fct&gt; |\n",
-       "|---|---|---|---|---|---|\n",
-       "| CTG_2226 | CTG_2226 | CTG_2226 | PRETREATED | CTG_2226 | REFRACTORY |\n",
-       "| CTG_2227 | CTG_2227 | CTG_2227 | PRETREATED | CTG_2227 | RELAPSED   |\n",
+       "| <!--/--> | ID &lt;chr&gt; | label &lt;chr&gt; | condition &lt;fct&gt; | replicate &lt;chr&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| CTG_2226 | CTG_2226 | CTG_2226 | PRETREATED | CTG_2226 |\n",
+       "| CTG_2227 | CTG_2227 | CTG_2227 | PRETREATED | CTG_2227 |\n",
        "\n"
       ],
       "text/plain": [
-       "         ID       label    condition  replicate Diagnosis \n",
-       "CTG_2226 CTG_2226 CTG_2226 PRETREATED CTG_2226  REFRACTORY\n",
-       "CTG_2227 CTG_2227 CTG_2227 PRETREATED CTG_2227  RELAPSED  "
+       "         ID       label    condition  replicate\n",
+       "CTG_2226 CTG_2226 CTG_2226 PRETREATED CTG_2226 \n",
+       "CTG_2227 CTG_2227 CTG_2227 PRETREATED CTG_2227 "
       ]
      },
      "metadata": {},
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "4a4ed6a4",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "c78ab187",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "51d69386",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "1ce09552",
    "metadata": {
     "scrolled": false
@@ -559,7 +559,7 @@
        "rownames(4688): A2M A8MWD9 ... ZYX ZZEF1\n",
        "rowData names(29): hgnc_symbol ProteinGroupId ... maxCooks replace\n",
        "colnames(44): CTG_2226 CTG_2227 ... CTG_3679 CTG_3680\n",
-       "colData names(7): ID label ... sizeFactor replaceable"
+       "colData names(6): ID label ... sizeFactor replaceable"
       ]
      },
      "metadata": {},
@@ -571,14 +571,15 @@
     "assay(se) <- round(2^assay(se)) # deseq2 uses counts instead of log2(counts)\n",
     "head(assay(se), 2)\n",
     "dds <- DESeqDataSet(se, design = ~ condition)\n",
+    "dds$condition <- relevel(dds$condition, ref = \"NAIVE\") # make sure to use NAIVE as the control group\n",
     "dds <- DESeq(dds)\n",
     "dds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4565c0c1",
+   "execution_count": 38,
+   "id": "e47167f0",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +587,7 @@
       "text/plain": [
        "log2 fold change (MLE): condition PRETREATED vs NAIVE \n",
        "Wald test p-value: condition PRETREATED vs NAIVE \n",
-       "DataFrame with 6 rows and 6 columns\n",
+       "DataFrame with 10 rows and 6 columns\n",
        "         baseMean log2FoldChange     lfcSE        stat    pvalue      padj\n",
        "        <numeric>      <numeric> <numeric>   <numeric> <numeric> <numeric>\n",
        "A2M     74002.088   -0.652702443  0.398306 -1.63869700 0.1012764  0.999508\n",
@@ -594,7 +595,11 @@
        "AAAS    61905.885    0.008685031  0.170817  0.05084411 0.9594497  0.999508\n",
        "AACS      918.361   -0.077747152  0.366173 -0.21232335 0.8318548  0.999508\n",
        "AAGAB    3374.928    0.136979191  0.155544  0.88064578 0.3785096  0.999508\n",
-       "AAK1    14460.394   -0.495532859  0.242417 -2.04413659 0.0409401  0.907045"
+       "AAK1    14460.394   -0.495532859  0.242417 -2.04413659 0.0409401  0.907045\n",
+       "AAMDC   24349.120   -0.551259831  0.387231 -1.42359532 0.1545637  0.999508\n",
+       "AAMP    23418.835    0.119587996  0.166606  0.71778844 0.4728877  0.999508\n",
+       "AAR2     6709.312   -0.345325038  0.482667 -0.71545172 0.4743300  0.999508\n",
+       "AARS1  120466.306   -0.022683388  0.207836 -0.10914097 0.9130907  0.999508"
       ]
      },
      "metadata": {},
@@ -603,13 +608,13 @@
    ],
    "source": [
     "res <- results(dds)\n",
-    "head(res)"
+    "head(res, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "38e9b01d",
+   "execution_count": 39,
+   "id": "2ae18100",
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +638,54 @@
    ],
    "source": [
     "sum(res$padj < 0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70319535",
+   "metadata": {},
+   "source": [
+    "## Correct DEP function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a37ced5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_diff <- function(se, test = \"PRETREATED_vs_NAIVE\") {\n",
+    "    \n",
+    "#     # Show error if inputs are not the required classes\n",
+    "#     assertthat::assert_that(inherits(se, \"SummarizedExperiment\"))\n",
+    "#     # Show error if inputs do not contain required columns\n",
+    "#     type <- match.arg(type)\n",
+    "\n",
+    "    # Test for differential expression\n",
+    "    assay(se) <- round(2^assay(se)) # deseq2 uses counts instead of log2(counts)\n",
+    "    head(assay(se), 2)\n",
+    "    dds <- DESeqDataSet(se, design = ~ condition)\n",
+    "    dds$condition <- relevel(dds$condition, ref = \"NAIVE\") # make sure to use NAIVE as the control group\n",
+    "    dds <- DESeq(dds)\n",
+    "    res <- results(dds)\n",
+    "\n",
+    "    # merge res with rowData(se)\n",
+    "    rowData(se) <- merge(rowData(se, use,names = FALSE), res, \n",
+    "                         by.x = 'name', by.y = 'rowname', \n",
+    "                         all.x = TRUE, sort = FALSE)\n",
+    "    return(se)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ebe74982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_diff(se)"
    ]
   }
  ],
