--- a/dep_corrected.ipynb
+++ b/dep_corrected.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "3959b4da",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "e08c3c14",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "8115ab59",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "82f97520",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "93bbc1a7",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "21a2608e",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "41370016",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "13cdae86",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "179af32f",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "4a4ed6a4",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "c78ab187",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "51d69386",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "1ce09552",
    "metadata": {
     "scrolled": false
@@ -578,8 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "e47167f0",
+   "execution_count": 14,
+   "id": "71bd4a51",
    "metadata": {},
    "outputs": [
     {
@@ -613,8 +613,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "2ae18100",
+   "execution_count": 15,
+   "id": "e5e9acac",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70319535",
+   "id": "8dc37802",
    "metadata": {},
    "source": [
     "## Correct DEP function"
@@ -650,12 +650,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "a37ced5e",
+   "execution_count": 31,
+   "id": "2dd617b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_diff <- function(se, test = \"PRETREATED_vs_NAIVE\") {\n",
+    "#' @param se is in log2 scale\n",
+    "test_diff <- function(se) {\n",
     "    \n",
     "#     # Show error if inputs are not the required classes\n",
     "#     assertthat::assert_that(inherits(se, \"SummarizedExperiment\"))\n",
@@ -671,21 +672,146 @@
     "    res <- results(dds)\n",
     "\n",
     "    # merge res with rowData(se)\n",
-    "    rowData(se) <- merge(rowData(se, use,names = FALSE), res, \n",
-    "                         by.x = 'name', by.y = 'rowname', \n",
-    "                         all.x = TRUE, sort = FALSE)\n",
+    "    rowData(se) <- merge(rowData(se), res, by=0) %>% \n",
+    "        subset(select = -c(Row.names))\n",
     "    return(se)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "ebe74982",
+   "execution_count": 32,
+   "id": "83677370",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "renaming the first element in assays to 'counts'\n",
+      "\n",
+      "converting counts to integer mode\n",
+      "\n",
+      "estimating size factors\n",
+      "\n",
+      "estimating dispersions\n",
+      "\n",
+      "gene-wise dispersion estimates\n",
+      "\n",
+      "mean-dispersion relationship\n",
+      "\n",
+      "final dispersion estimates\n",
+      "\n",
+      "fitting model and testing\n",
+      "\n",
+      "-- replacing outliers and refitting for 88 genes\n",
+      "-- DESeq argument 'minReplicatesForReplace' = 7 \n",
+      "-- original counts are preserved in counts(dds)\n",
+      "\n",
+      "estimating dispersions\n",
+      "\n",
+      "fitting model and testing\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "class: SummarizedExperiment \n",
+       "dim: 4688 44 \n",
+       "metadata(0):\n",
+       "assays(1): ''\n",
+       "rownames(4688): A2M A8MWD9 ... ZYX ZZEF1\n",
+       "rowData names(12): hgnc_symbol ProteinGroupId ... pvalue padj\n",
+       "colnames(44): CTG_2226 CTG_2227 ... CTG_3679 CTG_3680\n",
+       "colData names(4): ID label condition replicate"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# test_diff(se)"
+    "dep <- test_diff(data)\n",
+    "dep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "432f696d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 12</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>hgnc_symbol</th><th scope=col>ProteinGroupId</th><th scope=col>ID</th><th scope=col>name</th><th scope=col>imputed</th><th scope=col>num_NAs</th><th scope=col>baseMean</th><th scope=col>log2FoldChange</th><th scope=col>lfcSE</th><th scope=col>stat</th><th scope=col>pvalue</th><th scope=col>padj</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>A2M</th><td>A2M  </td><td>P01023</td><td>P01023</td><td>A2M   </td><td>FALSE</td><td> 0</td><td> 74002.0878</td><td>-0.6527024425</td><td>0.3983058</td><td>-1.638696999</td><td>0.10127638</td><td>0.9995082</td></tr>\n",
+       "\t<tr><th scope=row>A8MWD9</th><td>NA   </td><td>A8MWD9</td><td>A8MWD9</td><td>A8MWD9</td><td>FALSE</td><td> 0</td><td>365327.8403</td><td>-0.0008660206</td><td>0.2248500</td><td>-0.003851548</td><td>0.99692692</td><td>0.9995082</td></tr>\n",
+       "\t<tr><th scope=row>AAAS</th><td>AAAS </td><td>Q9NRG9</td><td>Q9NRG9</td><td>AAAS  </td><td>FALSE</td><td> 0</td><td> 61905.8850</td><td> 0.0086850307</td><td>0.1708168</td><td> 0.050844114</td><td>0.95944974</td><td>0.9995082</td></tr>\n",
+       "\t<tr><th scope=row>AACS</th><td>AACS </td><td>Q86V21</td><td>Q86V21</td><td>AACS  </td><td> TRUE</td><td>11</td><td>   918.3613</td><td>-0.0777471519</td><td>0.3661734</td><td>-0.212323347</td><td>0.83185478</td><td>0.9995082</td></tr>\n",
+       "\t<tr><th scope=row>AAGAB</th><td>AAGAB</td><td>Q6PD74</td><td>Q6PD74</td><td>AAGAB </td><td> TRUE</td><td>15</td><td>  3374.9282</td><td> 0.1369791915</td><td>0.1555440</td><td> 0.880645777</td><td>0.37850957</td><td>0.9995082</td></tr>\n",
+       "\t<tr><th scope=row>AAK1</th><td>AAK1 </td><td>Q2M2I8</td><td>Q2M2I8</td><td>AAK1  </td><td> TRUE</td><td> 8</td><td> 14460.3941</td><td>-0.4955328585</td><td>0.2424167</td><td>-2.044136587</td><td>0.04094006</td><td>0.9070449</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 12\n",
+       "\\begin{tabular}{r|llllllllllll}\n",
+       "  & hgnc\\_symbol & ProteinGroupId & ID & name & imputed & num\\_NAs & baseMean & log2FoldChange & lfcSE & stat & pvalue & padj\\\\\n",
+       "  & <chr> & <chr> & <chr> & <chr> & <lgl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\tA2M & A2M   & P01023 & P01023 & A2M    & FALSE &  0 &  74002.0878 & -0.6527024425 & 0.3983058 & -1.638696999 & 0.10127638 & 0.9995082\\\\\n",
+       "\tA8MWD9 & NA    & A8MWD9 & A8MWD9 & A8MWD9 & FALSE &  0 & 365327.8403 & -0.0008660206 & 0.2248500 & -0.003851548 & 0.99692692 & 0.9995082\\\\\n",
+       "\tAAAS & AAAS  & Q9NRG9 & Q9NRG9 & AAAS   & FALSE &  0 &  61905.8850 &  0.0086850307 & 0.1708168 &  0.050844114 & 0.95944974 & 0.9995082\\\\\n",
+       "\tAACS & AACS  & Q86V21 & Q86V21 & AACS   &  TRUE & 11 &    918.3613 & -0.0777471519 & 0.3661734 & -0.212323347 & 0.83185478 & 0.9995082\\\\\n",
+       "\tAAGAB & AAGAB & Q6PD74 & Q6PD74 & AAGAB  &  TRUE & 15 &   3374.9282 &  0.1369791915 & 0.1555440 &  0.880645777 & 0.37850957 & 0.9995082\\\\\n",
+       "\tAAK1 & AAK1  & Q2M2I8 & Q2M2I8 & AAK1   &  TRUE &  8 &  14460.3941 & -0.4955328585 & 0.2424167 & -2.044136587 & 0.04094006 & 0.9070449\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 12\n",
+       "\n",
+       "| <!--/--> | hgnc_symbol &lt;chr&gt; | ProteinGroupId &lt;chr&gt; | ID &lt;chr&gt; | name &lt;chr&gt; | imputed &lt;lgl&gt; | num_NAs &lt;dbl&gt; | baseMean &lt;dbl&gt; | log2FoldChange &lt;dbl&gt; | lfcSE &lt;dbl&gt; | stat &lt;dbl&gt; | pvalue &lt;dbl&gt; | padj &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| A2M | A2M   | P01023 | P01023 | A2M    | FALSE |  0 |  74002.0878 | -0.6527024425 | 0.3983058 | -1.638696999 | 0.10127638 | 0.9995082 |\n",
+       "| A8MWD9 | NA    | A8MWD9 | A8MWD9 | A8MWD9 | FALSE |  0 | 365327.8403 | -0.0008660206 | 0.2248500 | -0.003851548 | 0.99692692 | 0.9995082 |\n",
+       "| AAAS | AAAS  | Q9NRG9 | Q9NRG9 | AAAS   | FALSE |  0 |  61905.8850 |  0.0086850307 | 0.1708168 |  0.050844114 | 0.95944974 | 0.9995082 |\n",
+       "| AACS | AACS  | Q86V21 | Q86V21 | AACS   |  TRUE | 11 |    918.3613 | -0.0777471519 | 0.3661734 | -0.212323347 | 0.83185478 | 0.9995082 |\n",
+       "| AAGAB | AAGAB | Q6PD74 | Q6PD74 | AAGAB  |  TRUE | 15 |   3374.9282 |  0.1369791915 | 0.1555440 |  0.880645777 | 0.37850957 | 0.9995082 |\n",
+       "| AAK1 | AAK1  | Q2M2I8 | Q2M2I8 | AAK1   |  TRUE |  8 |  14460.3941 | -0.4955328585 | 0.2424167 | -2.044136587 | 0.04094006 | 0.9070449 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       hgnc_symbol ProteinGroupId ID     name   imputed num_NAs baseMean   \n",
+       "A2M    A2M         P01023         P01023 A2M    FALSE    0       74002.0878\n",
+       "A8MWD9 NA          A8MWD9         A8MWD9 A8MWD9 FALSE    0      365327.8403\n",
+       "AAAS   AAAS        Q9NRG9         Q9NRG9 AAAS   FALSE    0       61905.8850\n",
+       "AACS   AACS        Q86V21         Q86V21 AACS    TRUE   11         918.3613\n",
+       "AAGAB  AAGAB       Q6PD74         Q6PD74 AAGAB   TRUE   15        3374.9282\n",
+       "AAK1   AAK1        Q2M2I8         Q2M2I8 AAK1    TRUE    8       14460.3941\n",
+       "       log2FoldChange lfcSE     stat         pvalue     padj     \n",
+       "A2M    -0.6527024425  0.3983058 -1.638696999 0.10127638 0.9995082\n",
+       "A8MWD9 -0.0008660206  0.2248500 -0.003851548 0.99692692 0.9995082\n",
+       "AAAS    0.0086850307  0.1708168  0.050844114 0.95944974 0.9995082\n",
+       "AACS   -0.0777471519  0.3661734 -0.212323347 0.83185478 0.9995082\n",
+       "AAGAB   0.1369791915  0.1555440  0.880645777 0.37850957 0.9995082\n",
+       "AAK1   -0.4955328585  0.2424167 -2.044136587 0.04094006 0.9070449"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(as.data.frame(rowData(dep)))"
    ]
   }
  ],
